Update swagger comments + fix admin
